Add junit5 and fix ci-cd

--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <groupId>com.monopoly</groupId>
     <artifactId>Monopoly</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 
     <properties>
