--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,7 +31,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
         image: bitt3r/monopoly
-        tags: v1, latest
+        tag: v1, latest
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
