--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,10 @@ jobs:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-        
+
+    - name: Run tests with Maven
+      run: mvn -B test --file pom.xml
+
     - name: Build with Maven
       run: mvn -B package --file pom.xml
       
