--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,12 +15,19 @@ jobs:
     runs-on: ${{matrix.os}}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ windows-latest, ubuntu-latest, macOS-latest ]
+        include:
+          - os: windows-latest
+            platform: amd64
+          - os: ubuntu-latest
+            platform: amd64
+          - os: macOS-latest
+            platform: amd64
 
 
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Set up JDK 14
       uses: actions/setup-java@v3
       with:
@@ -33,12 +40,16 @@ jobs:
 
     - name: Build with Maven
       run: mvn -B package --file pom.xml
-      
+
     - name: Build and push docker image
-      uses: mr-smithers-excellent/docker-build-push@v4
+      uses: docker/build-push-action@v2
       with:
-        image: bitt3r/monopoly
-        tag: latest
+        context: .
+        push: true
+        tags: |
+          bitt3r/monopoly:windows-latest
+          bitt3r/monopoly:ubuntu-latest
+          bitt3r/monopoly:macOS-latest
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
