--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -34,12 +34,12 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build Docker image for Windows
-        uses: docker/build-push-action@v1
-        with:
-          context: .
-          push: false
-          tags: bitt3r/monopoly:windows-latest
-          platform: windows/amd64
+        run: docker build -t bitt3r/monopoly:windows-latest .
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        # - name: Login to Docker
+        #   run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
   build-ubuntu:
     needs: test
@@ -52,12 +52,12 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Build Docker image for Ubuntu
-        uses: docker/build-push-action@v1
-        with:
-          context: .
-          push: false
-          tags: bitt3r/monopoly:ubuntu-latest
-          platform: linux/amd64
+        run: docker build -t bitt3r/monopoly:ubuntu-latest .
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        # - name: Login to Docker
+        #   run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
   push-windows:
     needs: build-windows
@@ -67,15 +67,12 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Push Docker image for Windows
-        uses: docker/build-push-action@v1
-        with:
-          context: .
-          push: true
-          tags: bitt3r/monopoly:windows-latest
-          platform: windows/amd64
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        run: docker push bitt3r/monopoly:windows-latest
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        # - name: Login to Docker
+        #   run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
 
   push-ubuntu:
     needs: build-ubuntu
@@ -85,12 +82,9 @@ jobs:
         uses: docker/setup-buildx-action@v1
 
       - name: Push Docker image for Ubuntu
-        uses: docker/build-push-action@v1
-        with:
-          context: .
-          push: true
-          tags: bitt3r/monopoly:ubuntu-latest
-          platform: linux/amd64
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        run: docker push bitt3r/monopoly:ubuntu-latest
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        # - name: Login to Docker
+        #   run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
