--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Test, Build and Publish Docker Image
+name: Java CI with Maven
 
 on:
   push:
@@ -7,80 +7,61 @@ on:
     branches: [ "master" ]
 
 jobs:
-  test:
+  build-amd64:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up JDK 14
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '14'
-          distribution: 'adopt'
+          distribution: 'temurin'
           cache: maven
 
-      - name: Test
+      - name: Run tests with Maven
         run: mvn -B test --file pom.xml
 
-  build-windows:
-    needs: test
-    runs-on: windows-latest
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
+      - name: Build and push docker image (AMD64)
+        uses: mr-smithers-excellent/docker-build-push@v4
+        with:
+          image: bitt3r/monopoly
+          tag: latest
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+  build-arm64:
+    runs-on: ubuntu-latest
+    container:
+      image: tonistiigi/buildx:latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up JDK 14
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
           java-version: '14'
-          distribution: 'adopt'
+          distribution: 'temurin'
+          cache: maven
 
-      - name: Build Docker image for Windows
-        run: |
-          docker build --build-arg JAR_FILE=target/monopoly.jar -t bitt3r/monopoly:windows-latest .
+      - name: Run tests with Maven
+        run: mvn -B test --file pom.xml
 
-  build-ubuntu:
-    needs: test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
-      - name: Set up JDK 14
-        uses: actions/setup-java@v2
+      - name: Build and push docker image (ARM64)
+        uses: mr-smithers-excellent/docker-build-push@v4
         with:
-          java-version: '14'
-          distribution: 'adopt'
-
-      - name: Build Docker image for Ubuntu
-        run: |
-          docker build --build-arg JAR_FILE=target/monopoly.jar -t bitt3r/monopoly:ubuntu-latest .
-
-  push-windows:
-    needs: build-windows
-    runs-on: windows-latest
-    steps:
-      - name: Push Docker image for Windows
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: bitt3r/monopoly:windows-latest
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-
-  push-ubuntu:
-    needs: build-ubuntu
-    runs-on: ubuntu-latest
-    steps:
-      - name: Push Docker image for Ubuntu
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: bitt3r/monopoly:ubuntu-latest
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          image: bitt3r/monopoly
+          tag: latest
+          registry: docker.io
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          buildx-args: --platform=linux/arm64
