--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,10 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 14
+      - name: Set up JDK 17 (AMD64)
         uses: actions/setup-java@v3
         with:
-          java-version: '14'
+          java-version: '17'
           distribution: 'temurin'
           cache: maven
 
@@ -43,12 +43,12 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK 14
-        uses: actions/setup-java@v3
-        with:
-          java-version: '14'
-          distribution: 'temurin'
-          cache: maven
+      - name: Set up JDK 17 (ARM64)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y openjdk-17-jdk
+          echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-arm64" >> $GITHUB_ENV
+          echo "PATH=\${JAVA_HOME}/bin:\${PATH}" >> $GITHUB_ENV
 
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
