--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,13 +35,18 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-  build-arm64:
+  setup-buildx:
     runs-on: ubuntu-latest
-    container:
-      image: tonistiigi/buildx:latest
-
     steps:
-      - uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+  build-arm64:
+    needs: setup-buildx
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
 
       - name: Set up JDK 17 (ARM64)
         run: |
@@ -57,11 +62,12 @@ jobs:
         run: mvn -B package --file pom.xml
 
       - name: Build and push docker image (ARM64)
-        uses: mr-smithers-excellent/docker-build-push@v4
+        uses: docker/build-push-action@v2
         with:
-          image: bitt3r/monopoly
-          tag: latest
+          context: .
+          push: true
+          tags: bitt3r/monopoly:arm64-latest
+          platforms: linux/arm64
           registry: docker.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          buildx-args: --platform=linux/arm64
