--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -48,15 +48,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17 (ARM64)
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y openjdk-17-jdk
-          echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-arm64" >> $GITHUB_ENV
-          echo "PATH=\${JAVA_HOME}/bin:\${PATH}" >> $GITHUB_ENV
-
-      - name: Install Maven
-        run: sudo apt-get install -y maven
+      - name: Set up JDK 17 (ARM64) and Maven
+        uses: actions/setup-java@v2
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          maven-version: 'default'
 
       - name: Run tests with Maven
         run: mvn -B test --file pom.xml
