--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,9 +20,6 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Run tests with Maven
-        run: mvn -B test --file pom.xml
-
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
@@ -35,35 +32,35 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-  build-arm64:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Set up JDK 17 (ARM64) and Maven
-        uses: actions/setup-java@v2
-        with:
-          java-version: '17'
-          distribution: 'adopt'
-          maven-version: 'default'
-
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Run tests with Maven
-        run: mvn -B test --file pom.xml
-
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
-      - name: Build and push docker image (ARM64)
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: true
-          tags: bitt3r/monopoly:arm64-latest
-          platforms: linux/arm64
-          registry: docker.io
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+#  build-arm64:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Set up JDK 17 (ARM64) and Maven
+#        uses: actions/setup-java@v2
+#        with:
+#          java-version: '17'
+#          distribution: 'adopt'
+#          maven-version: 'default'
+#
+#      - name: Checkout code
+#        uses: actions/checkout@v3
+#
+#      - name: Set up Docker Buildx
+#        uses: docker/setup-buildx-action@v1
+#
+#      - name: Run tests with Maven
+#        run: mvn -B test --file pom.xml
+#
+#      - name: Build with Maven
+#        run: mvn -B package --file pom.xml
+#
+#      - name: Build and push docker image (ARM64)
+#        uses: docker/build-push-action@v2
+#        with:
+#          context: .
+#          push: true
+#          tags: bitt3r/monopoly:arm64-latest
+#          platforms: linux/arm64
+#          registry: docker.io
+#          username: ${{ secrets.DOCKER_USERNAME }}
+#          password: ${{ secrets.DOCKER_PASSWORD }}
